feat: User controller WIP & Logger added
